# LidarAssistedControl

./: .gitignore  README.md  setup.py
FFP_v1/: CMakeLists.txt
FFP_v1/src/: FFP_Helpers.f90  FFP_v1_Subs.f90  FFP_v1_Types.f90
LDP_v1/: CMakeLists.txt
LDP_v1/src/: LDP_v1.f90  LDP_v1_Subs.f90  LDP_v1_Types.f90
LDP_v2/: CMakeLists.txt
LDP_v2/src/: LDP_v2_Types.f90
ROSCO/src/: Controllers.f90  ROSCO_IO.f90  ReadSetParameters.f90  filters.f90
Release/: README.md
Release/AnalyticalModel/: LidarRotorSpectra_IEA15MW_4BeamPulsed.mat  LidarRotorSpectra_IEA15MW_CircularCW.mat
Release/FFP_v1/: CMakeLists.txt
Release/FFP_v1/src/: FFP_v1.f90
Release/IEA-15-240-RWT-Monopile/: ChangeLog.txt  FFP_v1_4BeamPulsed.IN  IEA-15-240-RWT-Monopile.fst  LDP_v1_4BeamPulsed.IN  ROSCO_v2d6.IN  WRAPPER_CircularCW.IN
Release/IEA15MW_01/: ChangeLog.txt  DTUWEC.IN  FFP_v1.IN  IEA-15-240-RWT-Monopile.fst  IEA-15-240-RWT-Monopile_DTUWEC.fst  IEA-15-240-RWT-Monopile_FB.outb  IEA-15-240-RWT-Monopile_Simulink.fst  LDP_v1.IN  OpenFAST_ROSCO_FFP.mdl  OpenFAST_ROSCO_FFP.slx  PlotResultsSummerGames.m  ROSCO_v2d6.IN  RunExample.m  RunExample.py  RunExample_DTUWEC.m  RunExample_DTUWEC.py  RunExample_Simulink.m  Run_exe_simulink.m  WRAPPER.IN  WRAPPER_DTUWEC.IN
Release/IEA15MW_02/: ChangeLog.txt  FFP_v1.IN  IEA-15-240-RWT-UMaineSemi.fst  LDP_v2.IN  RunExample.m  RunExample.py  WRAPPER.IN
Release/IEA15MW_03/: CalculateREWSfromLidarData_LDP_v1.m  CalculateREWSfromLidarData_LDP_v1.py  CaluculateRWESfromWindField.mat  FFP_v1.IN  FFP_v1_CircularCW.IN  FFP_v1_MolasNL200.IN  FFP_v1_ZXTM.IN  IEA-15-240-RWT-Monopile.fst  IEA-15-240-RWT-Monopile_4BeamPulsed.fst  IEA-15-240-RWT-Monopile_CircularCW.fst  IEA-15-240-RWT-Monopile_MolasNL200.fst  IEA-15-240-RWT-Monopile_ZXTM.fst  LDP_v1.IN  LDP_v1_MolasNL200.IN  LDP_v1_ZXTM.IN  PlotResultsSummerGames.m  ROSCO_v2d6.IN  RunExample.m  RunExample_4BeamPulsed.m  RunExample_4BeamPulsed.py  RunExample_4BeamPulsed_PostProcessing.m  RunExample_4BeamPulsed_PostProcessing.py  RunExample_CircularCW.m  RunExample_CircularCW.py  RunExample_CircularCW_PostProcessing.m  RunExample_CircularCW_PostProcessing.py  RunExample_MolasNL200.m  RunExample_MolasNL200.py  RunExample_ZXTM.m  RunExample_ZXTM.py  SaveREWS.m  TurbSim2aInputFileTemplateIEA15MW.inp  WRAPPER_4BeamPulsed.IN  WRAPPER_MolasNL200.IN  WRAPPER_ZXTM.IN
Release/IEA15MW_04/: FFP_v1.IN  FFP_v2.IN  IEA-15-240-RWT-UMaineSemi.fst  LDP_v2.IN  ROSCO_v2d6.IN  RunExample.m  TurbSim2aInputFileTemplateIEA15MW.inp  WRAPPER.IN
Release/IEA15MW_05/: CalculateCost.m  CalculateCost.py  CompareRuns.m  CompareRuns.py  GenerateTurbSimWindFields.m  GenerateTurbSimWindFields.py  GetParametersForDLC1p2.m  GetParametersforDLC1p2.py  PlotResultsSummerGames.m  RunExample_FeedbackOnly.m  RunExample_FeedbackOnly.py  RunExample_LAC_4BeamPulsed.m  RunExample_LAC_4BeamPulsed.py  RunExample_LAC_CircularCW.m  RunExample_LAC_CircularCW.py  Statistics_FeedbackOnly.mat  Statistics_LAC_4BeamPulsed.mat  Statistics_LAC_4BeamPulsed_IAV.mat  Statistics_LAC_CircularCW.mat  Statistics_LAC_CircularCW_sowento.mat  Statistics_SteadyStates.mat  statistics_FeedbackOnly.csv  statistics_LAC_4BeamPulsed.csv  statistics_LAC_CircularCW.csv  statistics_SteadyStates.csv  statistics_feedback_only.csv
Release/MatlabFunctions/: CalculateDEL.m  CalculateREWSfromWindField.m  ManipulateTXTFile.m  ReadFASTbinary.m  ResizeAndSaveFigure.m  radPs2rpm.m  readBLgrid.m
Release/OpenFAST/: FAST_SFunc.mexw64
Release/OpenFAST-Simulink/: FAST_SFunc.mexw64
Release/PythonFunctions/: AdjustinputFiles.py  CalculateDEL.py  CalculateREWSfromWindField.py  CalculateStatistics.py  CollectTimeResults.py  CreatePermutationMatrix.py  DataFilterWindSpeedBins.py  GetSimulationName.py  GetStatistics.py  ManipulateFastInputFile.py  PlotTimeResults.py  PreProcessingSimulations.py  ProcessingSimulations.py  ReadBLgrid.py  (+4 more)
WRAPPER/: CMakeLists.txt
WRAPPER/src/: WRAPPER.f90  WRAPPER_Helpers.f90  WRAPPER_Types.f90
(+88 files in other folders)
